fix bug; list widget is aligned right side

--- a/labelmv-frontend/src/AnnotationPage.css
+++ b/labelmv-frontend/src/AnnotationPage.css
@@ -50,6 +50,7 @@ body {
 
 .video-selection {
   margin-top: 20px;
+  margin-bottom: 15px; /* Add space between video selection and annotation list */
 }
 
 .video-selection h4 {
